--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,14 +2,16 @@
 # tasks file for roles/basedeps
 
 - name: system packages | install epel repo
+  become: yes
   yum:
     name: epel-release
-    state: latest
+    state: present
 
 - name: system packages | basic system utils
+  become: yes
   yum:
     name: "{{ item }}"
-    state: latest
+    state: present
   with_items:
     - patch
     - redhat-lsb-core
