--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,15 @@
 ---
+sudo: required
 language: python
-python: "2.7"
 
-# Use the new container infrastructure
-sudo: false
-
-# Install ansible
-addons:
-  apt:
-    packages:
-    - python-pip
+services:
+  - docker
 
 install:
-  - pip install ansible
-  - ansible --version
-  - printf '[defaults]\nroles_path=../' >ansible.cfg
+  - pip install ome-ansible-molecule-dependencies
 
 script:
-  - ansible-playbook tests/test.yml -i tests/inventory --syntax-check
+  - molecule test
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
