--- a/molecule.yml
+++ b/molecule.yml
@@ -6,8 +6,8 @@ driver:
 docker:
   containers:
     - name: ansible-role-basedeps
-      image: ubuntu
-      image_version: latest
+      image: centos
+      image_version: 7
       ansible_groups:
         - group1
 verifier:
