--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -3,18 +3,17 @@ dependency:
   name: galaxy
 driver:
   name: docker
-lint:
-  name: yamllint
 platforms:
-  - name: instance
-    image: centos:7
+  - name: ansible-role-basedeps
+    image: centos
+    image_version: 7
 provisioner:
   name: ansible
   lint:
     name: ansible-lint
+#  env:
+#    MOLECULE_DEBUG: "true"
+#  options:
+#    vvv: "true"
 scenario:
   name: default
-verifier:
-  name: testinfra
-  lint:
-    name: flake8
