--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -6,8 +6,10 @@ driver:
 lint:
   name: yamllint
 platforms:
-  - name: instance
+  - name: centos-c7
     image: centos:7
+  - name: ubuntu-1804
+    image: ubuntu:18.04
 provisioner:
   name: ansible
   lint:
