Adjust the molecule cf https://github.com/ome/ansible-role-ssl-certificate/pull/17

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,7 @@
 ---
 galaxy_info:
   role_name: basedeps
+  namespace: ome
   author: ome-devel@lists.openmicroscopy.org.uk
   description: Base dependencies for most servers.
   company: Open Microscopy Environment
