--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -3,13 +3,13 @@ dependency:
   name: galaxy
 driver:
   name: docker
-lint:
-  name: yamllint
+lint: |
+    yamllint .
+    ansible-lint
+    flake8
 platforms:
   - name: centos-7
     image: centos:7
-  - name: ubuntu-1804
-    image: ubuntu:18.04
   - name: ubuntu-2004
     image: ubuntu:20.04
 provisioner:
@@ -20,5 +20,3 @@ scenario:
   name: default
 verifier:
   name: testinfra
-  lint:
-    name: flake8
