--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -32,10 +32,12 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.9'
+          python-version: '3.8'
       - name: Install Ansible & Molecule
-        run: pip install "ansible<8" ansible-lint flake8 \
-          "molecule<5" molecule-plugins[docker] pytest-testinfra
+        run: |
+            pip install "ansible<8" "ansible-lint<6.13" flake8
+            pip install "molecule<5" "ansible-compat<4"
+            pip install molecule-plugins[docker] pytest-testinfra
       - name: Run molecule
         run: molecule test -s "${{ matrix.scenario }}"
 
