--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -9,7 +9,7 @@ lint: |
     flake8
 platforms:
   - name: centos-7
-    image: centos:7
+    image: centos/systemd
   - name: ubuntu-2004
     image: ubuntu:20.04
 provisioner:
