--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,20 +1,19 @@
 ---
 # tasks file for roles/basedeps
-
 - name: system packages | install epel repo
   become: true
-  ansible.builtin.yum:
+  ansible.builtin.dnf:
     name: epel-release
     state: present
   when: ansible_os_family == 'RedHat'
 
 # use separate yum/apt tasks because package only installs one item at a time
-
-- name: system packages | basic system utils (centos)
+- name: system packages | basic system utils (rockylinux)
   become: true
-  ansible.builtin.yum:
+  ansible.builtin.dnf:
     name: "{{ basedeps_packages }}"
     state: present
+    allowerasing: true
   when: ansible_os_family == 'RedHat'
 
 - name: system packages | basic system utils (ubuntu)
@@ -24,9 +23,11 @@
     state: present
   when: ansible_os_family == 'Debian'
 
+# lsb_release is only used in ubuntu systems
+# https://github.com/search?q=org%3Aome%20lsb_release&type=code
 - name: system packages | lsb
   become: true
   ansible.builtin.package:
     name: "{{ basedeps_lsb_package[ansible_os_family] }}"
     state: present
-  when: basedeps_install_lsb
+  when: ansible_os_family == 'Debian'
