--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -8,7 +8,7 @@ lint: |
     ansible-lint
     flake8
 platforms:
-  - name: rockylinux
+  - name: rockylinux-9
     image: rockylinux:9
   - name: ubuntu-2204
     image: ubuntu:22.04
