--- a/meta/main.yml
+++ b/meta/main.yml
@@ -8,13 +8,12 @@ galaxy_info:
   license: BSD
   min_ansible_version: 2.1
   platforms:
-    - name: EL
+    - name: rockylinux
       versions:
-        - 7
+        - 9
     - name: Ubuntu
       versions:
-        - bionic
-        - focal
+        - jammy
   galaxy_tags:
     - cloud
     - system
