removes Dockerfile template and updates apt cache in task

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -19,6 +19,7 @@
 - name: system packages | basic system utils (ubuntu)
   become: true
   ansible.builtin.apt:
+    update_cache: true
     name: "{{ basedeps_packages }}"
     state: present
   when: ansible_os_family == 'Debian'
