--- a/meta/main.yml
+++ b/meta/main.yml
@@ -8,7 +8,7 @@ galaxy_info:
   license: BSD
   min_ansible_version: 2.1
   platforms:
-    - name: Rocky Linux
+    - name: EL
       versions:
         - 9
     - name: Ubuntu
