--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,11 +1,17 @@
 ---
 # tasks file for roles/basedeps
-- name: system packages | install epel repo
+- name: Import a key for epel
+  ansible.builtin.rpm_key:
+    state: present
+    key:  https://dl.fedoraproject.org/pub/epel/RPM-GPG-KEY-EPEL-9
+
+- name: epel | setup dnf repository
   become: true
   ansible.builtin.dnf:
-    name: epel-release
+    update_cache: true
+    name:
+      https://dl.fedoraproject.org/pub/epel/epel-release-latest-9.noarch.rpm
     state: present
-  when: ansible_os_family == 'RedHat'
 
 # use separate yum/apt tasks because package only installs one item at a time
 - name: system packages | basic system utils (rockylinux)
