--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,6 +4,7 @@
   ansible.builtin.rpm_key:
     state: present
     key:  https://dl.fedoraproject.org/pub/epel/RPM-GPG-KEY-EPEL-9
+  when: ansible_os_family == 'RedHat'
 
 - name: epel | setup dnf repository
   become: true
@@ -12,6 +13,7 @@
     name:
       https://dl.fedoraproject.org/pub/epel/epel-release-latest-9.noarch.rpm
     state: present
+  when: ansible_os_family == 'RedHat'
 
 # use separate yum/apt tasks because package only installs one item at a time
 - name: system packages | basic system utils (rockylinux)
